fix issue with nav bar overflowing when zoomed

--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ a:hover {
     flex-direction: column;
     padding: 2rem;
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .gameContainer {
